<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Droid10</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="droid_10">OWASP Droid10</string>
    <string name="credits">Credits</string>
    <string name="about">About</string>
    <string name="scan">Scan</string>
    <string name="livescan">Live Scan</string>
    <string name="title_activity_about">About</string>
    <string name="about_content">OWASP Droid10 is an opensource  handheld based (android) web pen testing tool. It can scan for web application vulnerability from any android device.Some features can be customized according to testers need.</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="vuln">Scan for Vulnerability</string>
    <string name="xss">Cross Site Scripting</string>
    <string name="sqli">SQL Injection</string>
    <string name="ci">Command Injection</string>
    <string name="fi">File Inclusion</string>
    <string name="title_activity_cross_site_scripting_scan">CrossSiteScriptingScanActivity</string>
    <string name="sillycon">http://www.sillycon.org</string>
    <string name="dibyendu">\u0040dibsyhex</string>
    <string name="title_activity_xssvectors">XSSVectors</string>
    <string name="vectors">Vectors</string>
    <string name="title_activity_vector">VectorActivity</string>
    <string name="title_activity_live_scan">LiveScanActivity</string>
    <string name="vulnselect">Select type of vulnerability</string>
    <string name="progress">Waiting to scan</string>
    <string name="title_activity_repeater">Repeater</string>
    <string name="request">Request</string>
    <string name="fetch">Fetch</string>
    <string name="replay">Replay</string>
    <string name="response">Response</string>

</resources>
