<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dibsyhex.droid10.ScanActivity"
    android:background="@drawable/bluetheme">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vuln"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:textStyle="bold"
            android:textSize="20sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xss"
                android:id="@+id/btn_xss"
                android:background="@drawable/bluetheme"
                style="@style/CoolText"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sqli"

            android:background="@drawable/bluetheme"
            style="@style/CoolText"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ci"

            android:background="@drawable/bluetheme"
            style="@style/CoolText"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fi"

            android:background="@drawable/bluetheme"
            style="@style/CoolText"/>

    </LinearLayout>


</ScrollView>
