<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dibsyhex.droid10.VectorActivity"
    android:background="@drawable/bluetheme">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vectors"
            android:layout_gravity="center"
            style="@style/CoolText"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xss"
            android:id="@+id/xss_vector_btn"
            style="@style/CoolText"
            android:background="@drawable/bluetheme"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sqli"
            android:id="@+id/sqli_vector_btn"
            style="@style/CoolText"
            android:background="@drawable/bluetheme"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ci"
            android:id="@+id/ci_vector_btn"
            style="@style/CoolText"
            android:background="@drawable/bluetheme"/>


    </LinearLayout>

</ScrollView>
