<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dibsyhex.droid10.LiveScanActivity"
    android:background="@drawable/bluetheme"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/vulnselect"
            style="@style/CoolText"/>



        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edttxt_vulnurl"
            android:hint="Enter a url"
            style="@style/CoolText"/>

        <Spinner
            android:id="@+id/spinner_vuln"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/vulnselect"
            style="@style/CoolText">

        </Spinner>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/qwee"
            android:text="@string/scan"
            android:background="@drawable/bluetheme"
            style="@style/CoolText"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            style="@style/CoolText"
            android:text="@string/progress"/>

        <WebView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:id="@+id/webview_vuln"
            android:paddingTop="50sp"
            android:paddingBottom="50sp">

        </WebView>





    </LinearLayout>








</ScrollView>
